--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ h1{
 }
 
 /*These are the inidivudal flights and their information in a box*/
-.iFlight{
+.indivFlight{
     font-size: 1.5em;
     text-align: center;
     width: 300px;
