--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
 
 /*Changes your normal HTML elements*/
 body{
+    display: flex;
+    margin: 0;
+    height: 100vh;
     font-family: Helvetica;
     color: var(--dark-blue);;
     background-color: var(--light-blue);
@@ -21,6 +24,33 @@ h1{
     font-size: 4em;
 }
 
+
+/*Testing a new UI layout for map.html, map taking 2/3 on the left and a side bar on the right third*/
+#mapContainer{
+    display: flex;
+    flex: 1;
+}
+
+#map{
+    display: flex;
+    width: 80%;
+    border: 2px solid black;
+}
+
+#sideBar{
+    display: flex;
+    width: 20%;
+    flex-direction: column;
+    text-align: center;
+    border: 2px solid black;
+    background-color: var(--light-blue);
+}
+
+#navContainer{
+    flex: 0 0 auto;
+    display: flex;
+    justify-content: center;
+}
 
 /*Navigation Button and Container*/
 #navBtn{
@@ -44,11 +74,6 @@ h1{
 
 #navBtn:hover{
     background-color: var(--button-clicked);
-}
-
-#navContainer{
-    display: flex;
-    justify-content: center;
 }
 
 
@@ -79,12 +104,4 @@ h1{
     color: var(--light-blue);
     background-color: var(--dark-blue);
     box-shadow: 5px 5px 15px var(--dark-blue-shadow);
-}
-
-
-#map{
-    height: 600px;
-    margin-top: 1em;
-    border: 2px solid black;
-    border-radius: 10px;
 }
